--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <version>2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+
     </dependencies>
 
 </project>
