--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <version>4.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
