--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
             <version>4.3.8.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.187</version>
+        </dependency>
+
     </dependencies>
 
 </project>
