--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
                 <!--</configuration>-->
             <!--</plugin>-->
         </plugins>
+        <testSourceDirectory>test/main/java</testSourceDirectory>
     </build>
 
     <groupId>java.main</groupId>
