--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-fest": "~0.1.5",
     "grunt-sass": "^0.18.1",
-    "grunt-shell": "^1.1.1"
+    "grunt-shell": "^1.1.1",
+    "grunt-contrib-uglify": "~0.9.1",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-requirejs": "~0.4.4"
   }
 }
